# priscillafx-web

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2024-08-23_initial.py  README.md
src/backend/: Dockerfile  config.py  gunicorn.py  logger.py  main.py
src/backend/api/: logger.py
src/backend/api/routers/artist/: router.py
src/backend/api/routers/auth/: config.py  manager.py  router.py  utils.py
src/backend/api/routers/blog/: router.py
src/backend/api/routers/custom/: router.py
src/backend/api/routers/pages/: router.py
src/backend/api/routers/tasks/: router.py  tasks.py
src/backend/database/: db.py
src/backend/database/models/artist/: models.py
src/backend/database/models/auth/: models.py
src/backend/database/models/blog/: models.py
src/backend/database/models/custom/: models.py
src/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
src/frontend/public/images/: about.tsx
src/frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
src/frontend/src/components/: footer.tsx  navbar.tsx
src/frontend/src/pages/: about.tsx  artists.tsx  blog.tsx  custom.tsx  faq.tsx  mods.tsx  software.tsx
src/frontend/src/pages/info/: about.tsx  artists.tsx  blog.tsx  faq.tsx
src/frontend/src/pages/shop/: custom.tsx  mods.tsx  software.tsx
src/frontend/src/pages/software/: [id].tsx
src/frontend/src/styles/: globals.css
